# refine

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.website  LICENSE  README.md  compose.manual.yml  docker-compose.install-test.yml  docker-compose.yml  fly.toml  install.sh  manual-docker.sh  package-lock.json  package.json  playwright.config.ts  pyproject.toml  r  rr  spec.md  story.md  test-install.sh
.claude/: settings.json
.github/workflows/: fly-deploy.yml
.refine/: governance.json  guidance.json  nodes.json  refine.json  reporters.json  supervisor-agent.json
.refine/quality/: legacy-command-transition.json  settings.json
desktop/src-tauri/: Cargo.toml
docs/: agent-install.md  clean-room.md  hype-video.md  rust.md  spec.md  story.md
docs/intent/: 01-design.md  README.md
docs/runbooks/: README.md  distribute-and-converge.md  fleet-standup.md  install.md  migrate-gap-state.md  promote-dogfood-source.md  provision.md  semantic-release.md  supervisor-agent.md  v2-to-v4-migration-runbook.md
docs/spec/: cli-reference.md  feature-spec.md  fleet-provisioning.md  git-workflow-test-matrix.md  rust-integration-coverage-matrix.md  rust-integration-feature-index.md  rust-integration-implementation-checklist.md  rust-integration-spec.md  rust-spec-impl-report.md  rust-spec.md  (+1 more)
python/: .env.example  pyproject.toml
refine/: __init__.py  __main__.py  cli.py
refine_cli/: __init__.py  __main__.py  cli.py
refine_runner/: __init__.py  __main__.py  agent_cli.py  chat_mgr.py  conflict_resolver.py  dispatcher.py  friendly_outcome.py  gap_writer.py  git_ops.py  ipc_server.py  llm.py  merger.py  preflight.py  recovery.py  runner.py  subprocess_mgr.py  target_app.py  verify_op.py
refine_runtime/: identity.py  ipc.py  resources.py  supervised_process.py  supervisor.py  supervisor_protocol.py  worker.py
refine_server/: __init__.py  __main__.py  activity.py  agent_cli.py  backend_protocol.py  chat_mgr.py  chat_ops.py  cluster.py  cluster_ops.py  config.py  conflict_resolver.py  dashboard_ops.py  db.py  dispatcher.py  feature_ops.py  features.py  friendly.py  friendly_outcome.py  gap_ops.py  gap_writer.py  gaps.py  git_ops.py  governance.py  governance_agent.py  guidance.py  import_ops.py  llm.py  merger.py  observability_ops.py  paths.py  perf_metrics.py  preflight.py  priorities.py  process_ops.py  project_apps.py  project_registry.py  project_state.py  project_sync.py  push_ops.py  quality.py  (+14 more)
refine_shared/: __init__.py  activity.py  backend_protocol.py  config.py  db.py  features.py  friendly.py  gaps.py  ipc_protocol.py  paths.py  ulid.py
refine_ui/: __main__.py  api.py  backend_client.py  background_jobs.py  poller.py  runtime.py  server.py  sse.py  system_events.py
refine_web/: __init__.py  __main__.py  api.py  backend_client.py  ipc_client.py  poller.py  runtime.py  server.py
rust/: Cargo.toml
rust/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
rust/desktop/src-tauri/src/: main.rs
scripts/: docker-compose.install-test.yml  install.sh  refine-runner.service  run-runner.sh
src/: lib.rs  main.rs
tests/: background_jobs_test.py  cache_rebuild_force_test.py  changes_index_test.py  chat_gap_opening_summary_test.py  cli_chat_test.py  cli_durable_root.rs  cli_gaps_changes_test.py  cli_import_test.py  cli_project_apps_test.py  cli_settings_test.py  cli_surface.rs  cli_target_root.rs  cli_typer_test.py  cluster_ssh_cli.rs  cluster_test.py  command_palette_test.py  db_transaction_test.py  dotenv_test.py  features_test.py  files_api_test.py  full_workflow.rs  gap_failure_banner_test.py  gap_instance_ownership_test.py  gap_logs_pagination_test.py  gap_node_ownership_test.py  gaps_bulk_instances_test.py  gaps_bulk_nodes_test.py  gaps_bulk_status_test.py  gaps_round_filter_test.py  governance_test.py  guidance_test.py  helpers.py  import_chunking_test.py  import_csv_parse_test.py  import_dedup_test.py  import_extract_api_chunking_test.py  import_persist_test.py  install_script_test.py  install_uninstall_docker.rs  instance_settings_copy_test.py  (+51 more)
xtask/: Cargo.toml  README.md
(+774 files in other folders)
