[package]
name = "refine"
version = "3.0.3"
edition = "2024"
autotests = false

[lib]
test = false
doctest = false

[[bin]]
name = "refine"
path = "src/main.rs"
test = false

[[test]]
name = "test_all"
path = "tests/test_all.rs"
harness = false

[[test]]
name = "smoke_ai_contract"
path = "tests/smoke_ai_contract.rs"
test = false

[[test]]
name = "cli_target_root"
path = "tests/cli_target_root.rs"
test = false

[[test]]
name = "production_binary_install"
path = "tests/production_binary_install.rs"
test = false

[[test]]
name = "cli_surface"
path = "tests/cli_surface.rs"
test = false

[[test]]
name = "cluster_ssh_cli"
path = "tests/cluster_ssh_cli.rs"
test = false

[[test]]
name = "install_uninstall_docker"
path = "tests/install_uninstall_docker.rs"
test = false

[[test]]
name = "full_workflow"
path = "tests/full_workflow.rs"
test = false

[[test]]
name = "multi_instance_sync"
path = "tests/multi_instance_sync.rs"
test = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }
portable-pty = "0.8"
