[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "refine"
version = "2.3.9"
description = "Background AI coding agents that close behavior Gaps in client codebases."
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [{name = "buwilliams"}]
dependencies = [
    "typer>=0.16,<1.0",
]

[project.scripts]
refine = "refine_cli.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["refine_cli*", "refine_runtime*", "refine_server*", "refine_ui*"]

[tool.setuptools.package-data]
refine_ui = [
    "project_templates/*",
    "static/*",
    "static/css/*",
    "static/js/*",
    "static/js/features/*",
]
